# django_chat_app

./: .prettierrc  db.sqlite3  pyproject.toml  requirements.txt
chat_app/: models.py  urls.py  views.py
chat_app/migrations/: 0001_initial.py
core/: settings.py  urls.py
frontend/: index.html  index.js  style.css
